# OpenWinLocker

./: README.md  main.py  pyproject.toml
client/: pyproject.toml  start_client.bat  windows_locker.py
server/: main.py  pyproject.toml  start_server.bat
server/static/: index.html  script.js  style.css
