[project]
name = "windows-locker-server"
version = "1.0.0"
description = "FastAPI server for managing Windows workstation locks and DNS blocking"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
windows-locker-server = "main:app"

